testament/tests/shouldfail/toutputsub.nim
discard """
  outputsub: "something else"
"""

echo "Hello World!"
